fixing spacing for iphone compatibility

--- a/src/App.css
+++ b/src/App.css
@@ -512,6 +512,7 @@ transform: scale(1.2);
       width:90vw;
       border: 2px solid rgb(18, 225, 160);
       margin-bottom:2vh;
+      -webkit-margin-bottom:2vh;
     }
     
     .projectImg{
@@ -525,7 +526,7 @@ transform: scale(1.2);
       padding:0; 
       -webkit-padding:0;
       height:300vh;
-      -webkit-height:300vh;
+      -webkit-height:150vh;
       justify-content: center;
       -webkit-justify-content: center;
       align-items: center;
